--- a/AsuD_CAPTUM_v0.1.ipynb
+++ b/AsuD_CAPTUM_v0.1.ipynb
@@ -442,7 +442,11 @@
       "source": [
         "Ich glaube es sollte entweder eine Stemming oder eine Lemmatizing Funktion angewendet werden.\n",
         "\n",
-        "Ich glaube wir sollten erst Lemmatizen und dann Stopwords entfernen."
+        "Ich glaube wir sollten erst Lemmatizen und dann Stopwords entfernen.\n",
+        "\n",
+        "In der Literatur habe ich folgende Vorgehensweise gefunden:\n",
+        "Tokenization, Stop word removal, Lemmatization and Stemming \n",
+        "(Hamisu & Mansour, 2021, S. 95)"
       ],
       "id": "yjs1JRBiRY-I"
     },
@@ -486,18 +490,6 @@
         "df"
       ],
       "id": "HhxYmjBJ2iYG",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "PgFbNx-hn45t"
-      },
-      "source": [
-        "df"
-      ],
-      "id": "PgFbNx-hn45t",
       "execution_count": null,
       "outputs": []
     },
@@ -562,43 +554,6 @@
         "print(*tags, sep=\"\\n\")"
       ],
       "id": "StvfVkx226jA",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "UZp-zM-on99y"
-      },
-      "source": [
-        "def retMostFrequentTag (text,setOfTags=tags):\n",
-        "  occ = 0\n",
-        "  mostFrequentTag = None\n",
-        "  lowerListOfTags = [tag.lower() for tag in setOfTags]\n",
-        "  for tag in lowerListOfTags:\n",
-        "    n_occ = text.count(tag)\n",
-        "    if n_occ > occ:\n",
-        "        occ = n_occ\n",
-        "        mostFrequentTag = tag\n",
-        "    else:\n",
-        "      next\n",
-        "  return mostFrequentTag\n",
-        "\n",
-        "df['Class'] = df['Corpus'].apply(retMostFrequentTag)"
-      ],
-      "id": "UZp-zM-on99y",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2jxnV04csZnz"
-      },
-      "source": [
-        "df"
-      ],
-      "id": "2jxnV04csZnz",
       "execution_count": null,
       "outputs": []
     },
@@ -939,7 +894,7 @@
         "\n",
         "transformer_model = SentenceTransformer(transformer_name)\n",
         "docs = df[korpus_name]\n",
-        "#embeddings = transformer_model.encode(docs, show_progress_bar=True)"
+        "embeddings = transformer_model.encode(docs, show_progress_bar=True)"
       ],
       "id": "fj47Zp5HHis1",
       "execution_count": null,
@@ -959,7 +914,7 @@
         "                          metric='euclidean',                      \n",
         "                          cluster_selection_method='eom', prediction_data=True)\n",
         "\n",
-        "vectorizer_model = CountVectorizer(ngram_range=(1, 1), stop_words=\"english\", min_df=2)\n"
+        "vectorizer_model = CountVectorizer(ngram_range=(1, 2), stop_words=\"english\", min_df=2)\n"
       ],
       "id": "RqbhA8K2S3Cm",
       "execution_count": null,
@@ -973,16 +928,26 @@
       "source": [
         "topic_model = BERTopic(language=\"english\", \n",
         "                       calculate_probabilities=True,    # We need the probabilities to visualize\n",
-        "                       top_n_words=5,\n",
         "                       #seed_topic_list = list(tags),\n",
-        "                       embedding_model = transformer_model,\n",
         "                       umap_model = umap_model,\n",
         "                       hdbscan_model = hdbscan_model,\n",
         "                       vectorizer_model = vectorizer_model\n",
         "                       )\n",
-        "topics, probs = topic_model.fit_transform(docs)"
+        "topics, probs = topic_model.fit_transform(docs, embeddings)"
       ],
       "id": "ELTFNj8VXCAQ",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qkupql2cXP6u"
+      },
+      "source": [
+        "topic_freq"
+      ],
+      "id": "Qkupql2cXP6u",
       "execution_count": null,
       "outputs": []
     },
@@ -1010,29 +975,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yD01-Ws7VACh"
-      },
-      "source": [
-        "rawTopics = topic_model.get_topics()\n",
-        "listTopics = pd.DataFrame.from_dict(data=rawTopics)\n",
-        "keysTpopic = list(listTopics.iloc[0].index)\n",
-        "valuesTopic = [element[0] for element in listTopics.iloc[0]]\n",
-        "dTopic = dict(zip(keysTpopic,valuesTopic))\n",
-        "topic_freq['TopicName'] = list(map(dTopic.get, topic_freq['Topic']))\n",
-        "topic_freq"
-      ],
-      "id": "yD01-Ws7VACh",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "SgiYB3av6yeg"
       },
       "source": [
         "for i in topic_freq['Topic']:\n",
-        "  print(f\"There are {topic_freq['Count'].iloc[i]} documents that are talking about topic ID {topic_freq['Topic'].iloc[i]} with Titel '{topic_freq['TopicName'].iloc[i]}'.\")"
+        "  print(f\"There are {topic_freq['Count'].iloc[i]} documents that are talking about topic ID {topic_freq['Topic'].iloc[i]}\")"
       ],
       "id": "SgiYB3av6yeg",
       "execution_count": null,
@@ -1041,39 +988,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1m8WV5JkzkRS"
-      },
-      "source": [
-        "topic_model.get_topics()"
-      ],
-      "id": "1m8WV5JkzkRS",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "SiiBYn1b1g1w"
+        "id": "HHDEzS4V7BBu"
       },
       "source": [
         "topic_model.visualize_topics()"
       ],
-      "id": "SiiBYn1b1g1w",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "DYt5hRz14syE"
-      },
-      "source": [
-        "dfBERTopic = df[['Authors', 'Year', 'Tags', 'Corpus', 'Class']]\n",
-        "dfBERTopic['Topic'] = topics\n",
-        "dfBERTopic['DocID'] = range(len(dfBERTopic))\n",
-        "dfBERTopic"
-      ],
-      "id": "DYt5hRz14syE",
+      "id": "HHDEzS4V7BBu",
       "execution_count": null,
       "outputs": []
     },
