--- a/AsuD_CAPTUM_v0.1.ipynb
+++ b/AsuD_CAPTUM_v0.1.ipynb
@@ -763,6 +763,72 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "W2kCtnDKNSQh"
+      },
+      "source": [
+        "### Bag of words (2nd Edition)"
+      ],
+      "id": "W2kCtnDKNSQh"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zZ9RLDYfNdFo"
+      },
+      "source": [
+        "from keras.preprocessing.text import Tokenizer\n",
+        "\n",
+        "docs = df['Corpus']\n",
+        "\n",
+        "## Step 1: Determine the Vocabulary\n",
+        "tokenizer = Tokenizer()\n",
+        "tokenizer.fit_on_texts(docs)"
+      ],
+      "id": "zZ9RLDYfNdFo",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WBaD4ef4OkH-"
+      },
+      "source": [
+        "print(f'Vocabulary: {list(tokenizer.word_index.keys())}')"
+      ],
+      "id": "WBaD4ef4OkH-",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "K-uZHhKfN1WH"
+      },
+      "source": [
+        "## Step 2: Count\n",
+        "vectors = tokenizer.texts_to_matrix(docs, mode='count')\n",
+        "print(vectors)"
+      ],
+      "id": "K-uZHhKfN1WH",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YIz0O0u9O3j9"
+      },
+      "source": [
+        ""
+      ],
+      "id": "YIz0O0u9O3j9",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "vJf8rx6MoqDu"
       },
       "source": [
