--- a/AsuD_CAPTUM_v0.1.ipynb
+++ b/AsuD_CAPTUM_v0.1.ipynb
@@ -955,7 +955,7 @@
         "# 3. microsoft/BiomedNLP-PubMedBERT-base-uncased-abstract-fulltext\n",
         "# 4. paraphrase-MiniLM-L6-v2    -->> Fast\n",
         "\n",
-        "transformer_name = \"paraphrase-MiniLM-L6-v2\" #@param {type:\"string\"}\n",
+        "transformer_name = \"allenai/scibert_scivocab_uncased\" #@param {type:\"string\"}\n",
         "korpus_name = \"Content\" #@param {type:\"string\"}\n",
         "\n",
         "transformer_model = SentenceTransformer(transformer_name)\n",
@@ -980,7 +980,7 @@
         "                          metric='euclidean',                      \n",
         "                          cluster_selection_method='eom', prediction_data=True)\n",
         "\n",
-        "vectorizer_model = CountVectorizer(ngram_range=(1, 2), stop_words=\"english\", min_df=2)\n"
+        "vectorizer_model = CountVectorizer(ngram_range=(1, 1), stop_words=\"english\", min_df=2)\n"
       ],
       "id": "RqbhA8K2S3Cm",
       "execution_count": null,
