BERTopic - added custom Stopwords (et, al, uas7, pubmed)

--- a/AsuD_CAPTUM_v0.1.ipynb
+++ b/AsuD_CAPTUM_v0.1.ipynb
@@ -955,14 +955,27 @@
         "# 3. microsoft/BiomedNLP-PubMedBERT-base-uncased-abstract-fulltext\n",
         "# 4. paraphrase-MiniLM-L6-v2    -->> Fast\n",
         "\n",
-        "transformer_name = \"allenai/scibert_scivocab_uncased\" #@param {type:\"string\"}\n",
-        "korpus_name = \"Content\" #@param {type:\"string\"}\n",
+        "transformer_name = \"paraphrase-MiniLM-L6-v2\" #@param {type:\"string\"}\n",
+        "korpus_name = \"Corpus\" #@param {type:\"string\"}\n",
         "\n",
         "transformer_model = SentenceTransformer(transformer_name)\n",
         "docs = df[korpus_name]\n",
         "embeddings = transformer_model.encode(docs, show_progress_bar=True)"
       ],
       "id": "fj47Zp5HHis1",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g5wk4lxKslXk"
+      },
+      "source": [
+        "seeds = [[tag] for tag in list(tags)]\n",
+        "seeds"
+      ],
+      "id": "g5wk4lxKslXk",
       "execution_count": null,
       "outputs": []
     },
@@ -980,7 +993,7 @@
         "                          metric='euclidean',                      \n",
         "                          cluster_selection_method='eom', prediction_data=True)\n",
         "\n",
-        "vectorizer_model = CountVectorizer(ngram_range=(1, 1), stop_words=\"english\", min_df=2)\n"
+        "vectorizer_model = CountVectorizer(ngram_range=(1, 1), lowercase=True, stop_words=['et', 'al', 'pubmed', 'uas7'], min_df=.01, max_df=.98)\n"
       ],
       "id": "RqbhA8K2S3Cm",
       "execution_count": null,
@@ -994,26 +1007,16 @@
       "source": [
         "topic_model = BERTopic(language=\"english\", \n",
         "                       calculate_probabilities=True,    # We need the probabilities to visualize\n",
-        "                       #seed_topic_list = list(tags),\n",
+        "                       top_n_words = 5,\n",
+        "                       #seed_topic_list = seeds,   # Uncomment if Seed-List is supposed to be applied.\n",
         "                       umap_model = umap_model,\n",
         "                       hdbscan_model = hdbscan_model,\n",
-        "                       vectorizer_model = vectorizer_model\n",
+        "                       vectorizer_model = vectorizer_model,\n",
+        "                       verbose = True\n",
         "                       )\n",
         "topics, probs = topic_model.fit_transform(docs, embeddings)"
       ],
       "id": "ELTFNj8VXCAQ",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Qkupql2cXP6u"
-      },
-      "source": [
-        "topic_freq"
-      ],
-      "id": "Qkupql2cXP6u",
       "execution_count": null,
       "outputs": []
     },
@@ -1041,6 +1044,18 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "Qkupql2cXP6u"
+      },
+      "source": [
+        "topic_freq"
+      ],
+      "id": "Qkupql2cXP6u",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "SgiYB3av6yeg"
       },
       "source": [
@@ -1054,10 +1069,22 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "JaEzrQ6YwR4y"
+      },
+      "source": [
+        "topic_model.get_topics()"
+      ],
+      "id": "JaEzrQ6YwR4y",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "HHDEzS4V7BBu"
       },
       "source": [
-        "topic_model.visualize_topics()"
+        "topic_model.visualize_barchart()"
       ],
       "id": "HHDEzS4V7BBu",
       "execution_count": null,
