Visualisierung für BERTopic hinzugefügt.

--- a/AsuD_CAPTUM_v0.1.ipynb
+++ b/AsuD_CAPTUM_v0.1.ipynb
@@ -955,7 +955,7 @@
         "# 3. microsoft/BiomedNLP-PubMedBERT-base-uncased-abstract-fulltext\n",
         "# 4. paraphrase-MiniLM-L6-v2    -->> Fast\n",
         "\n",
-        "transformer_name = \"paraphrase-MiniLM-L6-v2\" #@param {type:\"string\"}\n",
+        "transformer_name = \"allenai/scibert_scivocab_uncased\" #@param {type:\"string\"}\n",
         "korpus_name = \"Corpus\" #@param {type:\"string\"}\n",
         "\n",
         "transformer_model = SentenceTransformer(transformer_name)\n",
@@ -969,23 +969,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "g5wk4lxKslXk"
-      },
-      "source": [
-        "seeds = [[tag] for tag in list(tags)]\n",
-        "seeds"
-      ],
-      "id": "g5wk4lxKslXk",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "RqbhA8K2S3Cm"
       },
       "source": [
-        "umap_model = UMAP(n_neighbors=15, \n",
+        "umap_model = UMAP(n_neighbors=12, \n",
         "                 n_components=2,\n",
         "                 metric='cosine')\n",
         "\n",
@@ -993,7 +980,7 @@
         "                          metric='euclidean',                      \n",
         "                          cluster_selection_method='eom', prediction_data=True)\n",
         "\n",
-        "vectorizer_model = CountVectorizer(ngram_range=(1, 1), lowercase=True, stop_words=['et', 'al', 'pubmed', 'uas7'], min_df=.01, max_df=.98)\n"
+        "vectorizer_model = CountVectorizer(ngram_range=(1, 1), lowercase=True, stop_words=['et', 'al', 'pubmed', 'uas7', 'uas', 'test', 'level', 'week', 'score'], min_df=.01)\n"
       ],
       "id": "RqbhA8K2S3Cm",
       "execution_count": null,
@@ -1008,7 +995,6 @@
         "topic_model = BERTopic(language=\"english\", \n",
         "                       calculate_probabilities=True,    # We need the probabilities to visualize\n",
         "                       top_n_words = 5,\n",
-        "                       #seed_topic_list = seeds,   # Uncomment if Seed-List is supposed to be applied.\n",
         "                       umap_model = umap_model,\n",
         "                       hdbscan_model = hdbscan_model,\n",
         "                       vectorizer_model = vectorizer_model,\n",
@@ -1060,7 +1046,8 @@
       },
       "source": [
         "for i in topic_freq['Topic']:\n",
-        "  print(f\"There are {topic_freq['Count'].iloc[i]} documents that are talking about topic ID {topic_freq['Topic'].iloc[i]}\")"
+        "  if topic_freq['Topic'].iloc[i] >= 0:\n",
+        "    print(f\"There are {topic_freq['Count'].iloc[i]} documents that are talking about topic ID {topic_freq['Topic'].iloc[i]}\")"
       ],
       "id": "SgiYB3av6yeg",
       "execution_count": null,
@@ -1069,12 +1056,91 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JaEzrQ6YwR4y"
+        "id": "thGyFAyO50Se"
       },
       "source": [
-        "topic_model.get_topics()"
+        "top_words_topics = topic_model.get_topics()"
       ],
-      "id": "JaEzrQ6YwR4y",
+      "id": "thGyFAyO50Se",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GC7TjJF4IeLO"
+      },
+      "source": [
+        "top_words_topics = [{key : value for key, value in top_words_topics[key]} for key in top_words_topics.keys()]"
+      ],
+      "id": "GC7TjJF4IeLO",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JMr0nPXSHNEO"
+      },
+      "source": [
+        "#Visualisierung der Top Begriffe für beide Cluster mit SciBERT - \n",
+        "# -- !!! --- Diese Visaualisierung ist auf den Output im Paper zugeschnitten.\n",
+        "\n",
+        "\n",
+        "fig, (ax1, ax2) = plt.subplots(1, 2)\n",
+        "\n",
+        "fig.subplots_adjust(left=.125, bottom=.1, right=.9, top=.9, wspace=.5, hspace=.9)\n",
+        "\n",
+        "fig.suptitle('Cluster beschreibende Begriffe', y=1.1)\n",
+        "\n",
+        "sd = dict(sorted(top_words_topics[0].items(), key=lambda item: item[1]))\n",
+        "ax1.barh(list(sd.keys())[-9:],list(sd.values())[-9:])\n",
+        "ax1.set_xlim(list(sd.values())[-10], list(sd.values())[-1])\n",
+        "ax1.spines['top'].set_visible(False)\n",
+        "ax1.spines['right'].set_visible(False)\n",
+        "ax1.spines['bottom'].set_visible(False)\n",
+        "ax1.get_xaxis().set_visible(False)\n",
+        "ax1.title.set_text('Topic 1')\n",
+        "\n",
+        "\n",
+        "sd = dict(sorted(top_words_topics[1].items(), key=lambda item: item[1]))\n",
+        "ax2.barh(list(sd.keys())[-9:],list(sd.values())[-9:], color = 'red')\n",
+        "ax2.set_xlim(list(sd.values())[-10], list(sd.values())[-1])\n",
+        "ax2.spines['top'].set_visible(False)\n",
+        "ax2.spines['right'].set_visible(False)\n",
+        "ax2.spines['bottom'].set_visible(False)\n",
+        "ax2.get_xaxis().set_visible(False)\n",
+        "ax2.title.set_text('Topic 2')\n",
+        "\n",
+        "\n",
+        "  \n",
+        "  "
+      ],
+      "id": "JMr0nPXSHNEO",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-oNRbHj6aYit"
+      },
+      "source": [
+        "sd"
+      ],
+      "id": "-oNRbHj6aYit",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ISHGiaHz8aK1"
+      },
+      "source": [
+        "topic_model.visualize_barchart()"
+      ],
+      "id": "ISHGiaHz8aK1",
       "execution_count": null,
       "outputs": []
     },
@@ -1084,7 +1150,8 @@
         "id": "HHDEzS4V7BBu"
       },
       "source": [
-        "topic_model.visualize_barchart()"
+        "fig = topic_model.visualize_heatmap()\n",
+        "fig"
       ],
       "id": "HHDEzS4V7BBu",
       "execution_count": null,
@@ -1570,7 +1637,7 @@
         "transformer_name = \"allenai/scibert_scivocab_uncased\" #@param {type:\"string\"}\n",
         "\n",
         "model = SentenceTransformer(transformer_name)\n",
-        "embeddings = model.encode(df['Corpus_w_Punctuation'], show_progress_bar=True)"
+        "embeddings = model.encode(df['Corpus'], show_progress_bar=True)"
       ],
       "id": "VVPZHY6XfB0X",
       "execution_count": null,
