Alles schön aufbereitet

--- a/AsuD_CAPTUM_v0.1.ipynb
+++ b/AsuD_CAPTUM_v0.1.ipynb
@@ -23,6 +23,7 @@
       "name": "AsuD_CAPTUM_v0.1.ipynb",
       "private_outputs": true,
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     }
   },
@@ -38,37 +39,76 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IXfx4fnyrPpI"
+      },
+      "source": [
+        "# Clustering der Uriticaria-Papers"
+      ],
+      "id": "IXfx4fnyrPpI"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9kfT3bAdrPfM"
+      },
+      "source": [
+        "## Vorbereitung"
+      ],
+      "id": "9kfT3bAdrPfM"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ApgOFady9E8H"
+      },
+      "source": [
+        "Als erstes müssen verschiedenste Abhängigkeiten installiert werden. Dies ist nur bei der ersten Ausführung nötig."
+      ],
+      "id": "ApgOFady9E8H"
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "gBuZujwlr9cn"
       },
       "source": [
-        "# pip installs. Wenn Schon installiert, dann einfach nicht ausführen\n",
         "!pip install networkx\n",
         "\n",
-        "!pip install spacy\n",
-        "!pip install scispacy\n",
-        "!pip install https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_ner_bionlp13cg_md-0.4.0.tar.gz\n",
-        "!pip install https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_core_sci_sm-0.4.0.tar.gz\n",
+        "!pip install spacy --user\n",
+        "!pip install scispacy --user\n",
+        "# !pip install https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_ner_bionlp13cg_md-0.4.0.tar.gz\n",
+        "# !pip install https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_core_sci_sm-0.4.0.tar.gz\n",
         "\n",
-        "!pip install wordcloud\n",
+        "!pip install wordcloud --user\n",
         "\n",
-        "!pip install -q flair\n",
-        "!pip install -q numpy\n",
-        "!pip install -q pandas\n",
-        "!pip install -q gensim\n",
-        "!pip install -q hdbscan\n",
-        "!pip install -q bertopic\n",
-        "!pip install -q tensorflow\n",
-        "!pip install -q tensorflow_hub\n",
-        "!pip install -q tensorflow_text\n",
-        "!pip install -q top2vec\n",
-        "!pip install -q torch\n",
-        "!pip install -q sentence_transformers"
+        "!pip install -q flair --user\n",
+        "!pip install -q numpy --user\n",
+        "!pip install -q pandas --user\n",
+        "!pip install -q gensim --user\n",
+        "!pip install -q hdbscan --user\n",
+        "!pip install -q bertopic --user\n",
+        "!pip install -q tensorflow --user\n",
+        "!pip install -q tensorflow_hub --user\n",
+        "!pip install -q tensorflow_text --user\n",
+        "!pip install -q top2vec --user\n",
+        "!pip install -q torch --user\n",
+        "!pip install -q sentence_transformers --user"
       ],
       "id": "gBuZujwlr9cn",
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WQhw_kBrrUcY"
+      },
+      "source": [
+        "Import der Python-Bibliotheken"
+      ],
+      "id": "WQhw_kBrrUcY"
     },
     {
       "cell_type": "code",
@@ -102,20 +142,21 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GyZldFP-qjzj"
+      },
+      "source": [
+        "Die txt-Dateien müssen in den Ordner-Pfad content/CAPTUM/files übernommen werden."
+      ],
+      "id": "GyZldFP-qjzj"
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "y1JNnvqwhn-d"
       },
       "source": [
-        "# os.chdir(r'/content')\n",
-        "\n",
-        "# content_dir = r'/content/CAPTUM/'\n",
-        "\n",
-        "# # Remove if files already exist\n",
-        "# while os.path.exists(content_dir): \n",
-        "#     shutil.rmtree(content_dir)\n",
-        "\n",
-        "\n",
         "!git clone https://github.com/JulianSchmidtke/CAPTUM.git"
       ],
       "id": "y1JNnvqwhn-d",
@@ -128,9 +169,19 @@
         "id": "R1twNnO_f3hp"
       },
       "source": [
-        "# Duplikate unter den Papern entfernen anhand der Hash-Werte"
+        "## Duplikate unter den Papern entfernen anhand der Hash-Werte"
       ],
       "id": "R1twNnO_f3hp"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "txLy9XADraI5"
+      },
+      "source": [
+        "Übernahme der Dateipfade in einen Dataframe"
+      ],
+      "id": "txLy9XADraI5"
     },
     {
       "cell_type": "code",
@@ -149,6 +200,16 @@
       "id": "18f27004",
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "p83Irk7erqWr"
+      },
+      "source": [
+        "Entfernen von Duplikaten"
+      ],
+      "id": "p83Irk7erqWr"
     },
     {
       "cell_type": "code",
@@ -173,6 +234,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FC5DoMdJrsiq"
+      },
+      "source": [
+        "Aufnahme von Tags in den Dataframe"
+      ],
+      "id": "FC5DoMdJrsiq"
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "62410ea9"
@@ -189,6 +260,16 @@
       "id": "62410ea9",
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uyLXTiRXrzgk"
+      },
+      "source": [
+        "Auslesen der Inhalte aus den Dateien und Übernahme in den Dataframe"
+      ],
+      "id": "uyLXTiRXrzgk"
     },
     {
       "cell_type": "code",
@@ -223,6 +304,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qJZFzR23r5GS"
+      },
+      "source": [
+        "Erstellen eines Dataframes ohne Duplikate"
+      ],
+      "id": "qJZFzR23r5GS"
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "riAajBNjiMCf"
@@ -243,7 +334,7 @@
         "id": "XYlSFMEfgAwt"
       },
       "source": [
-        "# Korpus erstellen"
+        "## Korpus erstellen"
       ],
       "id": "XYlSFMEfgAwt"
     },
@@ -354,6 +445,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GlFP1b2ksCnu"
+      },
+      "source": [
+        "Eigene Stopwords, die aus den Texten entfernt werden sollen."
+      ],
+      "id": "GlFP1b2ksCnu"
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "hjUQ6ELhBLWv"
@@ -380,6 +481,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fHjwnQP_sI6V"
+      },
+      "source": [
+        "Entfernen von DOI mittels Regex, um keine Quellangaben als Tokens zu interpretieren."
+      ],
+      "id": "fHjwnQP_sI6V"
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "8jXAdrQgT4sV"
@@ -395,16 +506,14 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "QTogJ6y6EOX4"
+        "id": "5XAcSqgXsTFg"
       },
       "source": [
-        "removeWords(['csu', 'TEST', 'DOI', 'doi', 'al', 'DOI'])"
+        "Anwendung der zuvor erstellen Funktionen, um die Texte zu normalisieren und zu reduzieren."
       ],
-      "id": "QTogJ6y6EOX4",
-      "execution_count": null,
-      "outputs": []
+      "id": "5XAcSqgXsTFg"
     },
     {
       "cell_type": "code",
@@ -437,18 +546,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "yjs1JRBiRY-I"
+        "id": "i4kHBgVUsalt"
       },
       "source": [
-        "Ich glaube es sollte entweder eine Stemming oder eine Lemmatizing Funktion angewendet werden.\n",
-        "\n",
-        "Ich glaube wir sollten erst Lemmatizen und dann Stopwords entfernen.\n",
-        "\n",
-        "In der Literatur habe ich folgende Vorgehensweise gefunden:\n",
-        "Tokenization, Stop word removal, Lemmatization and Stemming \n",
-        "(Hamisu & Mansour, 2021, S. 95)"
+        "Eine Repräsentation des Korpus ohne Satzzeichen und eine mit Satzzeichen."
       ],
-      "id": "yjs1JRBiRY-I"
+      "id": "i4kHBgVUsalt"
     },
     {
       "cell_type": "code",
@@ -460,9 +563,7 @@
         "df['Corpus'] = df['Content'].apply(lambda c: normalize_text(regex_tokenizer, c))\n",
         "\n",
         "regex_tokenizer2 = nltk.RegexpTokenizer('\\w+[\\.,]{0,1}')\n",
-        "df['Corpus_w_Punctuation'] = df['Content'].apply(lambda c: normalize_text(regex_tokenizer2, c))\n",
-        "\n",
-        "# df['New_Corpus'] = df['Content'].apply(lambda c: simple_tokenizer(c))"
+        "df['Corpus_w_Punctuation'] = df['Content'].apply(lambda c: normalize_text(regex_tokenizer2, c))"
       ],
       "id": "EQ-PJE_p_K7g",
       "execution_count": null,
@@ -471,25 +572,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mxju8ng-_Gi5"
+        "id": "qWDnkORlF7kP"
       },
       "source": [
-        "# corpus_list = df['Content'].to_list()\n",
-        "# remove_word_in_every_corpus('', corpus_list)"
+        "type(list(df['Tags']))\n",
+        "tags = set(', '.join(list(df['Tags'])).split(', '))\n",
+        "print(*tags, sep=\"\\n\")"
       ],
-      "id": "mxju8ng-_Gi5",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "HhxYmjBJ2iYG"
-      },
-      "source": [
-        "df"
-      ],
-      "id": "HhxYmjBJ2iYG",
+      "id": "qWDnkORlF7kP",
       "execution_count": null,
       "outputs": []
     },
@@ -499,9 +589,19 @@
         "id": "BPVoM5XU5WGq"
       },
       "source": [
-        "# Wordcloud\n"
+        "## Wordcloud\n"
       ],
       "id": "BPVoM5XU5WGq"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "O7kJxRYPAadx"
+      },
+      "source": [
+        "Darstellung des Corpus als Wordcloud"
+      ],
+      "id": "O7kJxRYPAadx"
     },
     {
       "cell_type": "code",
@@ -536,30 +636,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "hCuEEMfP4-Y4"
-      },
-      "source": [
-        "# Distinct Tags"
-      ],
-      "id": "hCuEEMfP4-Y4"
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "StvfVkx226jA"
-      },
-      "source": [
-        "type(list(df['Tags']))\n",
-        "tags = set(', '.join(list(df['Tags'])).split(', '))\n",
-        "print(*tags, sep=\"\\n\")"
-      ],
-      "id": "StvfVkx226jA",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "8bb35178"
       },
       "source": [
@@ -576,18 +652,6 @@
         "### ScispaCy"
       ],
       "id": "T4RAqPjcZSY4"
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "6JlnzphOZVZ7"
-      },
-      "source": [
-        ""
-      ],
-      "id": "6JlnzphOZVZ7",
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -815,18 +879,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "YIz0O0u9O3j9"
-      },
-      "source": [
-        ""
-      ],
-      "id": "YIz0O0u9O3j9",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "vJf8rx6MoqDu"
@@ -955,7 +1007,7 @@
         "# 3. microsoft/BiomedNLP-PubMedBERT-base-uncased-abstract-fulltext\n",
         "# 4. paraphrase-MiniLM-L6-v2    -->> Fast\n",
         "\n",
-        "transformer_name = \"allenai/scibert_scivocab_uncased\" #@param {type:\"string\"}\n",
+        "transformer_name = \"paraphrase-MiniLM-L6-v2\" #@param {type:\"string\"}\n",
         "korpus_name = \"Corpus\" #@param {type:\"string\"}\n",
         "\n",
         "transformer_model = SentenceTransformer(transformer_name)\n",
@@ -1321,7 +1373,7 @@
         "id": "1c7411d8"
       },
       "source": [
-        "### TFIDF Vertorizer"
+        "### TFIDF Vektorizer"
       ],
       "id": "1c7411d8"
     },
@@ -1593,8 +1645,7 @@
         "          G.add_edge(word1, word2, weight=0.5)\n",
         "\n",
         "pos = nx.spring_layout(G, scale=2)\n",
-        "nx.draw(G, pos=pos, with_labels=True, node_color=color_map)\n",
-        "nx.write_gexf(G, 'C:/temp/gephy.gexf')"
+        "nx.draw(G, pos=pos, with_labels=True, node_color=color_map)"
       ],
       "id": "alRnyKz0sNCj",
       "execution_count": null,
@@ -1613,18 +1664,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rlYPHGjFuvXc"
-      },
-      "source": [
-        ""
-      ],
-      "id": "rlYPHGjFuvXc",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "VVPZHY6XfB0X"
       },
       "source": [
@@ -1634,7 +1673,7 @@
         "# 3. microsoft/BiomedNLP-PubMedBERT-base-uncased-abstract-fulltext\n",
         "\n",
         "#@title Transformer für Embedding\n",
-        "transformer_name = \"allenai/scibert_scivocab_uncased\" #@param {type:\"string\"}\n",
+        "transformer_name = \"paraphrase-MiniLM-L6-v2\" #@param {type:\"string\"}\n",
         "\n",
         "model = SentenceTransformer(transformer_name)\n",
         "embeddings = model.encode(df['Corpus'], show_progress_bar=True)"
@@ -1713,9 +1752,19 @@
         "id": "QgzBPYjQsFdE"
       },
       "source": [
-        "# KMeans in simpel am Stück"
+        "## KMeans am Stück"
       ],
       "id": "QgzBPYjQsFdE"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "O73JkOh4Alop"
+      },
+      "source": [
+        "Feature Extraction und aufbereitung des Korpus"
+      ],
+      "id": "O73JkOh4Alop"
     },
     {
       "cell_type": "code",
@@ -1766,12 +1815,22 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Pih5JS6kA17R"
+      },
+      "source": [
+        "KMeans berechnen für 20 Cluster  \n",
+        "Dabei die Werte für Elbow Curve und Silhouette berechnen"
+      ],
+      "id": "Pih5JS6kA17R"
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Bou8EYPX9JxD"
       },
       "source": [
-        "# KMeans berechnen für 20 Cluster\n",
         "Sum_of_squared_distances_simple = []\n",
         "silhouettes_simple = []\n",
         "max_range = 20\n",
@@ -1804,6 +1863,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XAF29t_lA9Qm"
+      },
+      "source": [
+        "K-Means mit dem Ergebnis aus Elbow/Silhouette berechnen"
+      ],
+      "id": "XAF29t_lA9Qm"
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "UyMTI42NCWxW"
@@ -1829,6 +1898,16 @@
       "id": "UyMTI42NCWxW",
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_7NwsCkhBCfP"
+      },
+      "source": [
+        "Visualisierung der Ergebnisse"
+      ],
+      "id": "_7NwsCkhBCfP"
     },
     {
       "cell_type": "code",
